# sklearn-quantile

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  push.yml  release.yml  test.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst  installation.rst  whats_new.rst
docs/source/notebooks/: example_qrf.ipynb  example_qrf.rst  example_usage.ipynb  example_usage.rst  tutorial_rst.tpl
sklearn_quantile/: __init__.py  base.py
sklearn_quantile/ensemble/: __init__.py  max_rf.pyx  maximum.pyx  qrf.pyx  quantile.pyx
sklearn_quantile/neighbors/: __init__.py  qknn.py  quantile.py
sklearn_quantile/utils/: __init__.py  utils.py  weighted_quantile.pxd  weighted_quantile.pyx
tests/: test_qrf.py  test_quantile_KNN.py  test_quantile_RF.py  test_quantile_nearest_neighbours.py  test_random_forest.py  test_weighted_quantile.py
tests/examples/: MAX_RF_accuracy.py  MAX_RF_timeit.py  QKNN.py  QRF.py  QRF_accuracy.py  QRF_timeit.py  readme_example.py
